# HTMLParserTest

./: .gitignore  CMakeLists.txt  README.md  macros.cmake  main.cpp
common/: CMakeLists.txt
common/inc/: common_types.h  i_model.h  i_observer.h  i_presenter.h  i_view.h
model/: CMakeLists.txt
model/inc/: i_model.h  my_queue.h  parser_model.h
model/src/: page_scanner.cpp  page_scanner.h  parser_model.cpp  parser_model.h
presenter/: CMakeLists.txt
presenter/inc/: i_observer.h  i_presenter.h  presenter.h
presenter/src/: presenter.cpp  presenter.h
view/: CMakeLists.txt
view/inc/: i_view.h  qt_view.h
view/src/: qt_view.cpp  qt_view.h
